# AMF-Placer

./: .gitignore  .gitmodules  AMFPlacer.py  CMakeLists.txt  Doxyfile  LICENSE  NOTICE  README.MD  Untitled-1.py  _1_intro.html  _2_1__build_the_placer.html  _2_2__run_an_example.html  _2_2__run_an_example.js  _2_3__setthe_placement_configurationin_j_s_o_nfile.html  _2_4__extract_design_informationfrom_vivado.html  _2_5__extract_device_informationfrom_vivado.html  _2_6__loadthe_output_placementin_vivado.html  _2_6__loadthe_output_placementin_vivado.js  _2_7__visualizethe_placement_convergence_procedure.html  _2_8__customizethe_placement_flow.html  _2_get_started.html  _2_get_started.js  _3_1__benchmarks_details.html  _3_2__experimental_results.html  _3_2__experimental_results.js  _3_2__experimental_results_1.html  _3_2__experimental_results_2.html  _3_3__download_post_implementation_vivado_projects.html  _3_3__download_post_implementation_vivado_projects.js  _3_benchmark_info.html  _3_benchmark_info.js  _4_publication.html  _5_1__w_l_opt.html  _5_2__cell_spreading.html  _5_3_macro_legalization.html  _5_4_packing.html  _5_5_timing_clock_congestion.html  _5_5_timing_clocking_congestion.html  _5_explanation.html  _5_explanation.js  (+4877 more)
.github/workflows/: cloc_code.yml  cmake.yml  main.yml
amfplacer/: CMakeLists.txt  configure.py
amfplacer/HiFPlacer/: CMakeLists.txt
amfplacer/HiFPlacer/designInfo/: CMakeLists.txt  DesignInfo.cc  DesignInfo.h  DesignInfo.py  DesignInfoBind.cpp
amfplacer/HiFPlacer/deviceInfo/: CMakeLists.txt  DeviceInfo.cc  DeviceInfo.h  DeviceInfoBind.cpp
amfplacer/HiFPlacer/placement/globalPlacement/: CMakeLists.txt  ClusterPlacer.cc  ClusterPlacer.h  GeneralSpreader.cc  GeneralSpreader.h  GlobalPlacementBind.cpp  GlobalPlacer.cc  GlobalPlacer.h  WirelengthOptimizer.cc  WirelengthOptimizer.h
amfplacer/HiFPlacer/placement/legalization/: CLBLegalizer.cc  CLBLegalizer.h  CMakeLists.txt  MacroLegalizer.cc  MacroLegalizer.h
amfplacer/HiFPlacer/placement/packing/: CMakeLists.txt  IncrementalBELPacker.cc  IncrementalBELPacker.h  InitialPacker.cc  InitialPacker.h  PackingBind.cpp  ParallelCLBPacker.cc  ParallelCLBPacker.h  ParallelCLBPacker_PackingCLBCluster.cc  ParallelCLBPacker_PackingCLBSite.cc
amfplacer/HiFPlacer/placement/placementInfo/: CMakeLists.txt  PlacementInfo.cc  PlacementInfo.h  PlacementInfoBind.cpp
amfplacer/HiFPlacer/placement/placementTiming/: CMakeLists.txt  PlacementTimingBind.cpp  PlacementTimingInfo.cc  PlacementTimingInfo.h  PlacementTimingOptimizer.cc  PlacementTimingOptimizer.h
amfplacer/HiFPlacer/problemSolvers/: CMakeLists.txt  GraphPartitioner.cc  GraphPartitioner.h  MinCostBipartiteMatcher.cc  SAPlacer.h
amfplacer/app/: CMakeLists.txt  partitionHyperGraph.cc
amfplacer/util/: enums.h  extensible_enum.h  message.cpp  message.h  namespace.h  torch.h  util.cuh
amfplacer/utils/: CMakeLists.txt  ExternalProcessFunc.h  Params.cc  Params.h  ProcessFuncInterface.h  const.h  simpleJSON.cc  simpleJSON.h  strPrint.cc  strPrint.h  stringCheck.cc  sysInfo.cc  utils.cpp  utils.h
benchmarks/DSE/: AMF-Vivado.py  DSE.py
benchmarks/analysisScripts/: VivadoGraphUtil.py  coordDensityVisualization.py  densityVisualization.py  exportDeviceLocation.py  figProcess.py  loopRun  paintPlacement.py  splitFile.sh  tiles
benchmarks/helperPythonScripts/: delayVisualization.py  netDelay  removeFailurePartFromTcl.py  unplaceFailureCells.py
benchmarks/testConfig/: AMF-Vivado-2020-testSet.py  BLSTM_midDensity.json  Gemmini.json  MemN2N.json  OpenPiton.json  OpenPiton_template.json  digitRecognition.json  faceDetect.json  halfsqueezenet.json  minimap_GENE.json  optimsoc.json
benchmarks/versionPerformance/: 20220402  20220406  20220408.csv  20220511  20220618  20220624  20220627  20220712
benchmarks/vivadoScripts/: checkCriticalPath.tcl  (+10 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+112 more)
src/: CMakeLists.txt
src/app/AMFPlacer/: AMFPlacer.h  AMFPlacerMainPage.md  main.cc
src/cmake/: configure.cmake
src/lib/: CMakeLists.txt
src/lib/HiFPlacer/: CMakeLists.txt
src/lib/HiFPlacer/designInfo/: CMakeLists.txt  DesignInfo.cc  DesignInfo.h
src/lib/HiFPlacer/deviceInfo/: CMakeLists.txt  DeviceInfo.cc  DeviceInfo.h
src/lib/HiFPlacer/placement/: CMakeLists.txt
src/lib/HiFPlacer/placement/globalPlacement/: CMakeLists.txt  ClusterPlacer.cc  ClusterPlacer.h  GeneralSpreader.cc  GeneralSpreader.h  GlobalPlacer.cc  GlobalPlacer.h  WirelengthOptimizer.cc  WirelengthOptimizer.h
src/lib/HiFPlacer/placement/legalization/: CLBLegalizer.cc  CLBLegalizer.h  CMakeLists.txt  MacroLegalizer.cc  MacroLegalizer.h
src/lib/HiFPlacer/placement/packing/: CMakeLists.txt  IncrementalBELPacker.cc  IncrementalBELPacker.h  InitialPacker.cc  InitialPacker.h  MacroSitePacker.cc  MacroSitePacker.h  ParallelCLBPacker.cc  ParallelCLBPacker.h  ParallelCLBPacker_PackingCLBCluster.cc  ParallelCLBPacker_PackingCLBSite.cc
src/lib/HiFPlacer/placement/placementInfo/: CMakeLists.txt  PlacementInfo.cc  PlacementInfo.h
src/lib/HiFPlacer/placement/placementTiming/: CMakeLists.txt  PlacementTimingInfo.cc  PlacementTimingInfo.h  PlacementTimingOptimizer.cc  PlacementTimingOptimizer.h
src/lib/HiFPlacer/problemSolvers/: CMakeLists.txt  GraphPartitioner.cc  GraphPartitioner.h  MinCostBipartiteMatcher.cc  MinCostBipartiteMatcher.h  QPSolverWrapper.cc  QPSolverWrapper.h  SAPlacer.cc  SAPlacer.h
src/lib/utils/: CMakeLists.txt  ExternalProcessFunc.h  GLDraw.cc  GLDraw.h  Params.cc  ProcessFuncInterface.h  const.h  dumpZip.cc  dumpZip.h  readZip.h  simpleJSON.h  strPrint.cc  strPrint.h  stringCheck.cc  stringCheck.h  sysInfo.cc  sysInfo.h  utils.h
src/unittest/: deviceinfo.py
(+224 files in other folders)
